--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "release:test": "jest && yarn lint && yarn docs:release && yarn build",
     "release:commit": "git commit -am \"chore(release): update documentation\"",
     "release:lerna": "lerna publish",
-    "browserlist": "npx browserslist \"last 2 years, not < 0.05%\""
+    "browserlist": "npx browserslist \"last 2 years, not < 0.05%, ie >= 11\""
   },
   "devDependencies": {
     "@babel/cli": "~7.4.0",
